samples/_failures_safe/1761086736_0f3f4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51a642d4.c: In function ‘main’:
./samples/SAFE/__tmp_51a642d4.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_51a642d4.c:157:17: error: expected declaration or statement at end of input
  157 |                 } else if
      |                 ^
./samples/SAFE/__tmp_51a642d4.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51a642d4.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51a642d4.c:157:17: error: expected declaration or statement at end of input
